# consultamatron

./: .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  conftest.py  package-lock.json  pyproject.toml  skillset-profiles.json
.claude/: settings.local.json
bmc-canvas/: SKILL.md
bmc-iterate/: SKILL.md
bmc-research/: SKILL.md
bmc-segments/: SKILL.md
business_model_canvas/: __init__.py  presenter.py
ca-aggregate/: SKILL.md
ca-diagnose-future/: SKILL.md
ca-diagnose-integrators/: SKILL.md
ca-diagnose-power/: SKILL.md
ca-diagnose-reciprocity/: SKILL.md
ca-diagnose-rewards/: SKILL.md
ca-diagnose-understanding/: SKILL.md
ca-iterate/: SKILL.md
ca-research/: SKILL.md
ca-synthesise/: SKILL.md
consulting/: cli.py  dtos.py  entities.py  repositories.py  usecases.py
docs/: cli-command-generation.md  conformance-testing.md  context-mapping-the-integration-surface.md  deliverable-architecture.md  engagement-protocol.md  howto-contribute-to-commons.md  howto-getting-started.md  howto-hacking-consultamatron.md  howto-pack-and-wrap.md  howto-personal-skillset.md  howto-proprietary-skillsets.md  index.md  integration-surface.md  open-standards.md  principles-glossary.md  prompt-engineering.md  semantic-packs.md  semantic-waist.md  wetware-efficiency.md
editorial-voice/: SKILL.md
engage/: SKILL.md
org-research/: SKILL.md
review/: SKILL.md
six_simple_rules_complexity_audit/: __init__.py  presenter.py
skillset_engineering/: __init__.py
skillsets/: business-model-canvas.md  index.json  wardley-mapping.md
tests/: conftest.py  test_bmc_presenter.py  test_cli.py  test_conformance.py  test_di.py  test_entities.py  test_entity_store.py  test_freshness.py  test_introspect.py  test_json_infrastructure.py  test_observation_routing.py  test_pack_nudger.py  test_pantheon.py  test_pipeline_cli.py  test_practice.py  test_repository_contracts.py  test_site_rendering.py  test_skill_link_cli.py  test_skill_link_manager.py  test_source_discovery.py  test_usecases.py  test_wardley_presenter.py  test_wip.py
wardley_mapping/: __init__.py  dtos.py  presenter.py  types.py  usecases.py
(+367 files in other folders)
