[project]
name = "consultamatron"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "jinja2>=3.1", "markdown>=3.5", "pydantic>=2.0"]

[dependency-groups]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
markers = [
    "doctrine: conformance tests for bounded-context protocol obligations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bin", "consulting", "src/practice", "wardley_mapping"]

[project.scripts]
consultamatron = "bin.cli.main:cli"
