[project]
name = "consultamatron"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "jinja2>=3.1", "markdown>=3.5", "pydantic>=2.0", "pyyaml>=6.0"]

[dependency-groups]
test = ["pytest>=8.0"]
lint = ["ruff>=0.8"]

[tool.pytest.ini_options]
markers = [
    "doctrine: conformance tests for bounded-context protocol obligations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# For hatch build/editable-install only — runtime BC discovery
# uses directory scanning in practice.bc_discovery, not this list.
packages = [
    "bin",
    "commons/business_model_canvas",
    "commons/skillset_engineering",
    "commons/world_domination",
    "src/practice",
    "commons/wardley_mapping",
]

[project.scripts]
practice = "bin.cli.main:cli"
